Fix unit names in unit card not getting clipped off properly

--- a/css/main.less
+++ b/css/main.less
@@ -1154,9 +1154,9 @@ ul, ol
 
 .unit-info-name
 {
-  white-space: nowrap;
+  height: 1.2em;
   overflow: hidden;
-  min-height: 1.2em;
+  word-break: break-all;
 }
 
 .unit-status
